--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 
 
         <!-- Custom HTML head -->
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-QEEBDY96D0"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
         
+          gtag('config', 'G-QEEBDY96D0');
+        </script>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
@@ -167,6 +175,13 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="介绍"><a class="header" href="#介绍">介绍</a></h1>
+<p>网站收集一些开发人员可用的免费的服务资源，包括网站部署，边缘计算，Serverless 服务等</p>
+<h2 id="主要分类"><a class="header" href="#主要分类">主要分类</a></h2>
+<ul>
+<li>静态网站托管</li>
+<li>边缘计算托管</li>
+<li>Serverless</li>
+</ul>
 
                     </main>
 
