--- a/print.html
+++ b/print.html
@@ -92,7 +92,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">介绍</a></li><li class="chapter-item expanded "><a href="static-deploy/index.html"><strong aria-hidden="true">1.</strong> 静态网站</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="static-deploy/github-pages.html"><strong aria-hidden="true">1.1.</strong> GitHub Pages</a></li></ol></li><li class="chapter-item expanded "><a href="edge-delopy/index.html"><strong aria-hidden="true">2.</strong> 边缘部署</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">介绍</a></li><li class="chapter-item expanded "><a href="static-deploy/index.html"><strong aria-hidden="true">1.</strong> 静态网站</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="static-deploy/github-pages.html"><strong aria-hidden="true">1.1.</strong> GitHub Pages</a></li><li class="chapter-item expanded "><a href="static-deploy/deno-deploy.html"><strong aria-hidden="true">1.2.</strong> Deno Deploy</a></li></ol></li><li class="chapter-item expanded "><a href="edge-delopy/index.html"><strong aria-hidden="true">2.</strong> 边缘部署</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -196,6 +196,14 @@
 </ul>
 <h2 id="开通"><a class="header" href="#开通">开通</a></h2>
 <p>在 github 的项目中,设置-&gt;Pages 中开启</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="deno-deploy"><a class="header" href="#deno-deploy">Deno Deploy</a></h1>
+<p>Deno deploy 除了边缘部署能力外，还提供了静态文件部署能力。额度和边缘部署一致。</p>
+<p>具体文档参考： <a href="https://deno.com/deploy/docs/static-site">https://deno.com/deploy/docs/static-site</a></p>
+<h2 id="常见问题"><a class="header" href="#常见问题">常见问题：</a></h2>
+<ul>
+<li>安装<code>deployctl</code>: <a href="https://deno.com/deploy/docs/deployctl">https://deno.com/deploy/docs/deployctl</a></li>
+<li>获得部署<code>token</code>: <a href="https://dash.deno.com/account#access-tokens">https://dash.deno.com/account#access-tokens</a></li>
+</ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="边缘部署"><a class="header" href="#边缘部署">边缘部署</a></h1>
 
                     </main>
