--- a/static-deploy/deno-deploy.html
+++ b/static-deploy/deno-deploy.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>介绍 - 开发人员免费资源列表</title>
+        <title>Deno Deploy - 开发人员免费资源列表</title>
 
 
         <!-- Custom HTML head -->
@@ -20,21 +20,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
 
-        <link rel="icon" href="favicon.svg">
-        <link rel="shortcut icon" href="favicon.png">
-        <link rel="stylesheet" href="css/variables.css">
-        <link rel="stylesheet" href="css/general.css">
-        <link rel="stylesheet" href="css/chrome.css">
-        <link rel="stylesheet" href="css/print.css" media="print">
+        <link rel="icon" href="../favicon.svg">
+        <link rel="shortcut icon" href="../favicon.png">
+        <link rel="stylesheet" href="../css/variables.css">
+        <link rel="stylesheet" href="../css/general.css">
+        <link rel="stylesheet" href="../css/chrome.css">
+        <link rel="stylesheet" href="../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="fonts/fonts.css">
+        <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="highlight.css">
-        <link rel="stylesheet" href="tomorrow-night.css">
-        <link rel="stylesheet" href="ayu-highlight.css">
+        <link rel="stylesheet" href="../highlight.css">
+        <link rel="stylesheet" href="../tomorrow-night.css">
+        <link rel="stylesheet" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
@@ -43,7 +43,7 @@
     <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "";
+            var path_to_root = "../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
@@ -91,7 +91,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html" class="active">介绍</a></li><li class="chapter-item expanded "><a href="static-deploy/index.html"><strong aria-hidden="true">1.</strong> 静态网站</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="static-deploy/github-pages.html"><strong aria-hidden="true">1.1.</strong> GitHub Pages</a></li><li class="chapter-item expanded "><a href="static-deploy/deno-deploy.html"><strong aria-hidden="true">1.2.</strong> Deno Deploy</a></li></ol></li><li class="chapter-item expanded "><a href="edge-delopy/index.html"><strong aria-hidden="true">2.</strong> 边缘部署</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">介绍</a></li><li class="chapter-item expanded "><a href="../static-deploy/index.html"><strong aria-hidden="true">1.</strong> 静态网站</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../static-deploy/github-pages.html"><strong aria-hidden="true">1.1.</strong> GitHub Pages</a></li><li class="chapter-item expanded "><a href="../static-deploy/deno-deploy.html" class="active"><strong aria-hidden="true">1.2.</strong> Deno Deploy</a></li></ol></li><li class="chapter-item expanded "><a href="../edge-delopy/index.html"><strong aria-hidden="true">2.</strong> 边缘部署</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -145,7 +145,7 @@
                     <h1 class="menu-title">开发人员免费资源列表</h1>
 
                     <div class="right-buttons">
-                        <a href="print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
 
@@ -174,21 +174,24 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="介绍"><a class="header" href="#介绍">介绍</a></h1>
-<p>网站收集一些开发人员可用的免费的服务资源，包括网站部署，边缘计算，Serverless 服务等</p>
-<h2 id="主要分类"><a class="header" href="#主要分类">主要分类</a></h2>
+                        <h1 id="deno-deploy"><a class="header" href="#deno-deploy">Deno Deploy</a></h1>
+<p>Deno deploy 除了边缘部署能力外，还提供了静态文件部署能力。额度和边缘部署一致。</p>
+<p>具体文档参考： <a href="https://deno.com/deploy/docs/static-site">https://deno.com/deploy/docs/static-site</a></p>
+<h2 id="常见问题"><a class="header" href="#常见问题">常见问题：</a></h2>
 <ul>
-<li>静态网站托管</li>
-<li>边缘计算托管</li>
-<li>Serverless</li>
+<li>安装<code>deployctl</code>: <a href="https://deno.com/deploy/docs/deployctl">https://deno.com/deploy/docs/deployctl</a></li>
+<li>获得部署<code>token</code>: <a href="https://dash.deno.com/account#access-tokens">https://dash.deno.com/account#access-tokens</a></li>
 </ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="../static-deploy/github-pages.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
-                            <a rel="next" href="static-deploy/index.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../edge-delopy/index.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -198,8 +201,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="../static-deploy/github-pages.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
-                    <a rel="next" href="static-deploy/index.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../edge-delopy/index.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
@@ -214,13 +220,13 @@
         </script>
 
 
-        <script src="elasticlunr.min.js"></script>
-        <script src="mark.min.js"></script>
-        <script src="searcher.js"></script>
+        <script src="../elasticlunr.min.js"></script>
+        <script src="../mark.min.js"></script>
+        <script src="../searcher.js"></script>
 
-        <script src="clipboard.min.js"></script>
-        <script src="highlight.js"></script>
-        <script src="book.js"></script>
+        <script src="../clipboard.min.js"></script>
+        <script src="../highlight.js"></script>
+        <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
 
