--- a/static-deploy/github-pages.html
+++ b/static-deploy/github-pages.html
@@ -91,7 +91,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">介绍</a></li><li class="chapter-item expanded "><a href="../static-deploy/index.html"><strong aria-hidden="true">1.</strong> 静态网站</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../static-deploy/github-pages.html" class="active"><strong aria-hidden="true">1.1.</strong> GitHub Pages</a></li></ol></li><li class="chapter-item expanded "><a href="../edge-delopy/index.html"><strong aria-hidden="true">2.</strong> 边缘部署</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">介绍</a></li><li class="chapter-item expanded "><a href="../static-deploy/index.html"><strong aria-hidden="true">1.</strong> 静态网站</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../static-deploy/github-pages.html" class="active"><strong aria-hidden="true">1.1.</strong> GitHub Pages</a></li><li class="chapter-item expanded "><a href="../static-deploy/deno-deploy.html"><strong aria-hidden="true">1.2.</strong> Deno Deploy</a></li></ol></li><li class="chapter-item expanded "><a href="../edge-delopy/index.html"><strong aria-hidden="true">2.</strong> 边缘部署</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -194,7 +194,7 @@
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../edge-delopy/index.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../static-deploy/deno-deploy.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -208,7 +208,7 @@
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../edge-delopy/index.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../static-deploy/deno-deploy.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
